--- a/bai9.html
+++ b/bai9.html
@@ -11,24 +11,34 @@
         <div class="icon-cancle-2">
             <img src="icon/cancle-blue.png" alt="">
         </div>
-        <div class="avatar">
-            <img src="icon/avatar.png">
+        <div class="profile">
+            <div class="avatar">
+                <img src="icon/avatar.png">
+            </div>
+            <div>
+                <div class="title">Rot Mitt</div>
+                <div class="content-text">
+                <p>
+                    Consequuntur est accusantium et nemo. Similique quo atque ut eligendi aspernatur modi ut nemo dolorem.
+                </p>
+                 <p>
+                    Quod suscipit et sapiente et explicabo itaque molestiae laudantium architecto.
+                 </p> 
+                </div>
+                <div class="contact">
+                    <img src="icon/m.png" alt="" >
+                    <img src="icon/ins.png" alt="">
+                    <img src="icon/in.png" alt="">
+                </div>
+                <div class="message-2">
+                    <p>
+                        “Consequuntur est accusantium et nemo. Similique quo atque ut eligendi”
+                    </p>
+                </div>
+            </div>
         </div>
-        <div>
-            <div class="title">Rot Mitt</div>
-            <div class="content-text">Consequuntur est accusantium et nemo. Similique quo atque ut eligendi aspernatur modi ut nemo dolorem.
-                <br/>
-                <br/>
-             Quod suscipit et sapiente et explicabo itaque molestiae laudantium architecto. </div>
-        </div>
-        <div class="contact">
-            <img src="icon/m.png" alt="" class="img-1">
-            <img src="icon/ins.png" alt="" class="img-2">
-            <img src="icon/in.png" alt="" class="img-3">
-        </div>
-        <div class="message-2">
-            “Consequuntur est accusantium et nemo. Similique quo atque ut eligendi”
-        </div>
+        
+       
     </div>
 </body>
 </html>
