--- a/bai8.html
+++ b/bai8.html
@@ -9,53 +9,56 @@
 <body>
     <div class="container">
         <header>
-            <div class="label-login">Login</div>
-            <img  class="icon-cancle" src="icon/image2.png">
-            <div>
-                <button class="bt-login-with-google">
-                    <img class="icon-google" src="icon/image.png">
-                    Login with Google
-                </button>
-            </div>
+            <span class="icon-cancle">
+                <img src="icon/image2.png" alt="Close">
+            </span>
+            <h2 class="label-login">Login</h2>
+            <button class="bt-login-with-google">
+                <span class="icon-google">
+                    <img src="icon/image.png">
+                </span>
+                Login with Google
+            </button>
         </header>
 
         <section>
-            <div class="email">
-                <label>Email</label>
-                <div class="email-input">
-                    <input type="text" placeholder="leslie@pixsellz.io">
+            <form>
+                <div class="email">
+                    <label for="email">Email</label>
+                    <div class="email-input">
+                        <input type="email" id="email" placeholder="leslie@pixsellz.io">
+                    </div>
                 </div>
-            </div>
-            <div class="pass">
-                <label>Password</label>
-                <div class="pass-input">
-                    <input type="password" placeholder="••••••••••••">
+                <div class="pass">
+                    <label for="password">Password</label>
+                    <div class="pass-input">
+                        <input type="password" id="password" placeholder="••••••••••••">
+                    </div>
                 </div>
-            </div>
-            <div class="check-input">
-                <div class="check-input-text">
-                    <input type="checkbox" >
+                <div class="check-input">
+                    <div class="check-input-text">
+                        <input type="checkbox" >
+                    </div>
+                    <div class="check-input-label" id="remember-me">
+                        <lable for="remember-me">Remember me</lable>
+                    </div>
                 </div>
-                <div class="check-input-label">
-                    Remember me
+                <div>
+                    <button class="bt-login" type="submit">
+                        Log in
+                    </button>
                 </div>
-            </div>
-            <div>
-                <button class="bt-login">
-                    Log in
-                </button>
-            </div>
+            </form>
+            
             <div class="forget-label">
-                <a href="/">Forgot Password</a>
+                <a href="#">Forgot Password?</a>
             </div>
         </section>
         <footer>
-            <div class="message-label">
+            <p class="message-label">
                 Don´t have an account?
-            </div>
-            <div class="singup-label">
-                <a href="/">Sing up</a>
-            </div>
+                <a class="singup-label" href="#">Sing up</a>
+            </p>
         </footer>
     </div>
 </body>
